styles.css
body{
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    font-family: roboto, Arial, Helvetica, sans-serif;
    margin: 0px;
}
/* Section below is for the page header*/
.Header{
    background-color: #1f2937;
    display:flex;
    align-items: center;
    justify-content: space-between;
    margin: 0px;
    padding: 10px;
}

.left, .right {
    display: flex;
    align-items: center;
}

.logo img{
    max-width: 65px;
    max-height: 65px;
    width: auto;
    height: auto;
    border-radius: 50%;
    margin-left: 225px;
}
.headerTitle{
    margin: 10px;
    color: #f9faf8;
    font-size: 24px;
}
.links{
    margin-right: 175px;
    display: flex;
    gap: 20px;
}
a{
    text-decoration: none;
    color: #f9faf8;
}
/* Section below is for "hero" or Welcome info*/
.Hero{
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #1f2937;
    padding: 50px
}
.rightHero, .leftHero {
    display: flex;
}

.leftHero{
    flex-direction: column;
    gap: 10px;
    margin-right: 500px;
    
}

.heroTitle{
    display: flex;
    color: #f9faf8;
    font-size: 30px;
}
.heroText{
    display: flex;
    flex-direction: column;
    margin-top: 10px;
}
p {
    color: #f9faf8;
    margin: 0px;
    font-size: 16px;
}
.heroButton{
  
    margin-top: 10px;
  
}

button {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #3882f6;
    border-color: #3882f6;
    border-radius: 10px;
    color: #f9faf8;
    width: 75px
}

.heroPic {
    display: flex;
    width: 400px;
    height: 300px;
}

/* Section below is for Info/Pictures  */
.infoSec{
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}
.infoContainer {
    display: flex;
    flex-wrap: wrap;
   justify-content: space-around;
  
}
.infoTitle{
    display: flex;
    justify-content: center;
    font-size: 36px;
    color: #1f2937;
    margin-top:  50px;
    margin-bottom: 50px;
    max-width: 500px;
}

.infoPics img{
    display: flex;
    max-width: 200px;
    border: 3px solid skyblue;
    border-radius: 10px;
    justify-content: center;
}
/*Section Below is for Quote section */
.quote{
    background-color: #e5e7eb;
    padding: 90px;
}
.person, .words {
    display: flex;
    justify-content: center;
    color: #1f2937;
    font-size: 36px;
    background-color: #e5e7eb;
  
}
.words{
    font-style: italic;
    font-weight: lighter
}
.person{
    margin-left: 500px;
    margin-top: 50px;
    font-weight: bolder;
}
/* Section below is for call to action section*/
.callAction{
    display: flex;
    justify-content: center;
    color: red;
}
.group{
    display: flex;
    background-color: #3882f6;
    margin-top: 50px;
    margin-bottom: 50px;
    padding: 75px 100px 75px;
    border-radius: 10px;
}

.leftGroup{
display: flex;
flex-direction: column;
margin-right: 200px;
}

.callActionTitle, .callActionDesc{
    display: flex;
    color: #e5e7eb;
    font-weight: bold
}
.callActionDesc{
    font-weight: lighter
}
.bot{
    border-color: #f9faf8;
    width: 125px
}
/* Section below is for footer*/
.footer{
    display: flex;
    justify-content: center;
    background-color: #1f2937;
    padding: 20px;
}

